methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:31: error: type mismatch;
 found   : Unit
 required: Boolean
   avance()
         ^