methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit:Boolean=false
   avance()
   avance()
   avance()
   avance()
   avance()
   avance()
   avance()
  if (estSurBiscuit()){ 
   return !vuBiscuit
  }else
   recule()
   recule()
   recule()
   recule()
   recule()
   recule()
   recule()

   droite()
   avance()
   gauche()
   avance()
   avance()
   avance()
   avance()
   avance()
   avance()
   avance()
   avance()
  
}